# nappe

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  README.md  REVIEW.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  publish.yml
ref/: perses.md
ref/paper/: .gitignore  paper.html  paper.qmd  paper.tex  references.bib
ref/paper/_extensions/neurips/: neurips_2023.sty
ref/paper/paper_files/libs/bootstrap/: bootstrap-7d53968102f4a10bfd960dae93c7b372.min.css
src/: cache.rs  checker.rs  diff.rs  escapes.rs  grammar.rs  lib.rs  parser.rs  reducer.rs  rules.rs  shrink.rs  token_reduce.rs  transforms.rs  tree.rs  util.rs
src/nappe/: __main__.py  cache.py  checker.py  cli.py  diff.py  escapes.py  grammar.py  parser.py  reducer.py  rules.py  scope.py  shrink.py  token_reduce.py  transforms.py  tree.py
src/theseus_ship/: __main__.py  cli.py  grammar.py  parser.py  reducer.py  scope.py  shrink.py  token_reduce.py  transforms.py  tree.py
tests/: conftest.py  test_check.py  test_cli.py  test_escapes.py  test_grammar.py  test_parser.py  test_reducer.py  test_scope.py  test_shrink.py  test_token_reduce.py  test_transforms.py  test_tree.py
tests/fixtures/: complex.py  interesting_test.py  parse_error.py  simple.py
