[project]
name = "nappe"
version = "0.1.0"
description = "Syntax-guided program reduction (Perses algorithm)"
readme = "README.md"
authors = [
    { name = "NoRaincheck", email = "2498638+NoRaincheck@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
nappe = "nappe.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "deno>=2.8.3",
    "pytest>=8.0.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/fixtures"
markers = [
    "slow: mark test as slow (skipped by default, run with NAPPE_SLOW=1)",
]
